--- a/github_faq.html
+++ b/github_faq.html
@@ -2,3 +2,4 @@
 
 We're all new to using GitHub issues as our main issue tracker. So let's gather questions not covered in our existing documentation, so we can make sure they get addressed.
 
+<iframe name='embed_readwrite' src='http://pad.webmaker.org/github_FAQ?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false' width=600 height=400></iframe>
