--- a/github_faq.html
+++ b/github_faq.html
@@ -1,5 +1,5 @@
 ## GitHub Issues FAQ
 
-We're all new to using GitHub issues as our main issue tracker. So let's gather questions not covered in our existing documentation, so we can make sure they get addressed.
+We're all new to using GitHub issues as our main issue tracker. So let's gather questions not covered in our existing documentation, so we can make sure they get answered.
 
-<iframe name='embed_readwrite' src='http://pad.webmaker.org/github_FAQ?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false' width=600 height=400></iframe>
+[http://pad.webmaker.org/github_FAQ](http://pad.webmaker.org/github_FAQ)
